--- a/styles/blocks/_footer.scss
+++ b/styles/blocks/_footer.scss
@@ -1,16 +1,28 @@
 @use "../helpers"as *;
 
-/* Блок footer */
 .footer {
     background-color: var(--color-gray);
     color: var(--color-light);
     padding-block: 60px 45px;
+
+    @include tablet {
+        padding-block: 50px 100px;
+    }
+
+    @include mobile {
+        padding-block: 25px 35px;
+    }
 
     .footer-label {
         font-weight: 500;
         font-size: 18px;
         color: var(--color-line);
         margin-bottom: 30px;
+
+        @include mobile {
+            font-size: 16px;
+            margin-bottom: 20px;
+        }
     }
 
     &__top {
@@ -19,6 +31,16 @@
         align-items: center;
         border-bottom: 1px solid var(--color-line);
         padding-bottom: 50px;
+
+        @include mobile {
+            padding-bottom: 25px;
+
+            .visible-mobile-only {
+                .icon::after {
+                    --size: #{rem(45)};
+                }
+            }
+        }
     }
 
     &__logo img {
@@ -28,17 +50,45 @@
     &__body {
         display: flex;
         justify-content: space-between;
-        align-items: flex-start;
-        padding: 70px 0;
+        padding-top: 70px;
+        padding-bottom: 70px;
+
+        @include tablet {
+            flex-direction: column;
+            align-items: flex-start;
+            row-gap: 90px;
+            padding-top: 35px;
+            padding-bottom: 120px;
+        }
+
+        @include mobile {
+            row-gap: 60px;
+            padding-top: 25px;
+            padding-bottom: 40px;
+        }
     }
 
     &__left {
         display: flex;
+
+        @include mobile {
+            flex-direction: column;
+            row-gap: 60px;
+        }
     }
 
     &__navigation {
         padding-right: rem(120);
         border-right: 1px solid var(--color-line);
+
+        @include tablet {
+            padding-right: rem(60);
+        }
+
+        @include mobile {
+            border-right: none;
+            padding-right: 0;
+        }
 
         &-list {
             display: grid;
@@ -46,17 +96,37 @@
             padding-block: 20px;
             font-weight: 500;
             font-size: 18px;
-            color: (--color-light);
+            color: var(--color-light);
+
+            @include mobile {
+                font-size: 16px;
+                padding-block: 0px;
+            }
         }
     }
 
     &__contacts {
         padding-left: rem(120);
+        padding-right: 20px;
+
+        @include tablet {
+            padding-left: rem(60);
+        }
+
+        @include mobile {
+            padding-left: 0;
+            padding-right: 0;
+        }
 
         &-list {
             display: grid;
             row-gap: 40px;
             padding-top: 20px;
+
+            @include mobile {
+                row-gap: 30px;
+                padding-top: 0px;
+            }
         }
 
         &-item {
@@ -66,6 +136,7 @@
         &-link {
             font-weight: 700;
             font-size: 24px;
+            line-height: 1;
             color: var(--color-light);
         }
     }
@@ -75,6 +146,10 @@
         flex-direction: column;
         align-items: flex-end;
         padding-top: 20px;
+
+        @include tablet {
+            align-items: flex-start;
+        }
     }
 
     &__social-link:hover svg circle {
@@ -99,6 +174,14 @@
         will-change: transform; // Оптимизация для анимации
         animation: marquee 40s linear infinite;
 
+        @include tablet {
+            margin-bottom: 120px;
+        }
+
+        @include mobile {
+            margin-bottom: 35px;
+        }
+
         &-text {
             text-transform: uppercase;
             font-weight: 700;
@@ -108,6 +191,14 @@
             white-space: nowrap;
             padding-right: 50px;
             flex-shrink: 0;
+
+            @include tablet {
+                font-size: 186px;
+            }
+
+            @include mobile {
+                font-size: 105px;
+            }
         }
     }
 
@@ -117,7 +208,7 @@
         }
 
         100% {
-            transform: translateX(-50%); // Смещаем на половину ширины
+            transform: translateX(-50%);
         }
     }
 
