--- a/styles/_globals.scss
+++ b/styles/_globals.scss
@@ -47,9 +47,13 @@ h6,
 
 h1,
 .h1 {
-    @include fluid-text(70, 30);
+    @include fluid-text(50, 24);
     text-transform: uppercase;
     line-height: 1.2;
+    font-weight: 700;
+    text-transform: uppercase;
+    text-align: center;
+
 }
 
 h2,
@@ -68,7 +72,7 @@ h2,
     }
 
 }
-
+.h1 span,
 .h2 span {
     color: var(--color-blue);
 }
