--- a/styles/_normalize.scss
+++ b/styles/_normalize.scss
@@ -166,10 +166,10 @@ label {
    (за исключением тех, у которых уже указан
    атрибут stroke со значением 'none')
   */
-:where([stroke]:not([stroke="none"],
-        [stroke^="url"])) {
-    stroke: currentColor;
-}
+// :where([stroke]:not([stroke="none"],
+//         [stroke^="url"])) {
+//     stroke: currentColor;
+// }
 
 /**
    Чиним баг задержки смены цвета при взаимодействии с svg-элементами
