--- a/styles/blocks/_cargo-types.scss
+++ b/styles/blocks/_cargo-types.scss
@@ -39,6 +39,14 @@
         background-repeat: no-repeat;
         background-position: right bottom;
         background-size: contain;
+        &:hover {
+            .icon-arrow {
+                background-size: 100% 100%;
+            }
+            .icon-arrow svg path {
+                stroke: var(--color-light);
+            }
+        }
 
         @include tablet {
             height: 220px;
@@ -76,17 +84,17 @@
         }
 
         &:nth-child(1) {
-            background-image: url("../../images/cargo-types/1.png");
+            background-image: url("/images/cargo-types/1.png");
             order: 1;
         }
 
         &:nth-child(2) {
-            background-image: url("../../images/cargo-types/2.png");
+            background-image: url("/images/cargo-types/2.png");
             order: 2;
         }
 
         &:nth-child(3) {
-            background-image: url("../../images/cargo-types/3.png");
+            background-image: url("/images/cargo-types/3.png");
             order: 3;
 
             @include laptop {
@@ -99,7 +107,7 @@
         }
 
         &:nth-child(4) {
-            background-image: url("../../images/cargo-types/4.png");
+            background-image: url("/images/cargo-types/4.png");
             order: 4;
 
             @include laptop {
@@ -112,12 +120,12 @@
         }
 
         &:nth-child(5) {
-            background-image: url("../../images/cargo-types/5.png");
+            background-image: url("/images/cargo-types/5.png");
             order: 5;
         }
 
         &:nth-child(6) {
-            background-image: url("../../images/cargo-types/6.png");
+            background-image: url("/images/cargo-types/6.png");
             background-position-y: 35px;
             order: 6;
         }
@@ -166,15 +174,15 @@
                 line-height: 1.1;
             }
 
-            .icon {
+            .icon-arrow {
                 margin-left: auto;
 
-                &::after {
+                
                     @include tablet {
                         width: 28px;
                         height: 28px;
                     }
-                }
+                
             }
         }
     }
@@ -284,6 +292,9 @@
         &-subitem {
             list-style-type: disc;
             font-weight: 400;
+            @include mobile {
+                font-size: 14px;
+            }
         }
     }
 
