--- a/styles/blocks/_advantages.scss
+++ b/styles/blocks/_advantages.scss
@@ -24,10 +24,19 @@
         justify-content: space-between;
         border-radius: 20px;
         row-gap: 35px;
-        // background-color: var(--color-light);
         padding: 50px 15px 50px 25px;
 
         overflow: hidden;
+
+        &::after {
+            content: '';
+            position: absolute;
+            inset: 0;
+            width: 100%;
+            height: 100%;
+            background-color: var(--color-light);
+            z-index: -2;
+        }
 
         @include tablet {
             padding-bottom: 25px;
@@ -129,7 +138,7 @@
     }
 
     &__title {
-        transition: color 0.4s ease-in-out; 
+        transition: color 0.4s ease-in-out;
         @include fluid-text(36, 32);
 
         @include tablet {
