--- a/styles/blocks/_icon.scss
+++ b/styles/blocks/_icon.scss
@@ -87,72 +87,76 @@
 }
 
 
-.hover-circle-top {
+.hover-circle {
     position: relative;
     transition: all 0.4s ease-in-out;
+    overflow: hidden;
+
 
     &::before {
         content: '';
         position: absolute;
-        bottom: 0;
-        left: 0;
-        width: 100%;
-        height: 0;
         background-color: var(--color-blue);
-        border-top-right-radius: 200%;
-        border-top-left-radius: 200%;
         transition: all 0.4s ease-in-out;
         z-index: -1;
+
+        @include tablet {
+            display: none;
+        }
     }
 
     &:hover {
         color: var(--color-light);
 
-        &::before {
-            height: 100%;
-            border-top-right-radius: 0;
-            border-top-left-radius: 0;
-            background-color: var(--color-blue);
-        }
-
         h3 {
             color: var(--color-light);
+
+            @include tablet {
+                color: inherit;
+            }
+        }
+
+        @include tablet {
+            color: inherit;
         }
     }
 }
 
-.hover-circle-left {
-    position: relative;
-    transition: all 0.4s ease-in-out;
 
+.hover-circle-top {
     &::before {
-        content: '';
-        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 0;
+        border-top-right-radius: 150%;
+        border-top-left-radius: 150%;
+
+
+    }
+
+    &:hover::before {
+        height: 100%;
+        border-top-right-radius: 0;
+        border-top-left-radius: 0;
+    }
+}
+
+
+.hover-circle-left {
+    &::before {
         top: 0;
         right: 0;
         width: 0;
-        width: 0;
         height: 100%;
-        background-color: var(--color-blue);
-        border-top-left-radius: 200%;
-        border-bottom-left-radius: 200%;
-        transition: all 0.4s ease-in-out;
-        z-index: -1;
+        border-top-left-radius: 150%;
+        border-bottom-left-radius: 150%;
     }
 
-    &:hover {
-        color: var(--color-light);
-
-        &::before {
-            width: 100%;
-            border-top-left-radius: 0;
-            border-bottom-left-radius: 0;
-            background-color: var(--color-blue);
-        }
-
-        h3 {
-            color: var(--color-light);
-        }
+    &:hover::before {
+        width: 100%;
+        border-top-left-radius: 0;
+        border-bottom-left-radius: 0;
     }
 }
 
