--- a/styles/blocks/_hero.scss
+++ b/styles/blocks/_hero.scss
@@ -6,7 +6,7 @@
     align-items: center;
     overflow: hidden;
     min-height: calc(100vh - var(--header-height));
-
+    height: calc(100vh - var(--header-height));
     .header-block {
         justify-items: center;
         row-gap: 50px;
