--- a/styles/main.css
+++ b/styles/main.css
@@ -740,6 +740,16 @@ a[class] {
   z-index: 100;
   position: sticky;
   top: 0;
+  height: 0;
+  transform: translateY(-100%);
+  opacity: 0;
+  transition: transform 0.5s cubic-bezier(0.22, 0.61, 0.36, 1), opacity 0.5s ease;
+  transition: transform 0.2s ease-out, opacity 0.2s ease;
+}
+
+.header__wrap.visible {
+  transform: translateY(0);
+  opacity: 1;
 }
 
 .header {
@@ -1054,6 +1064,100 @@ a.is-active {
 }
 
 /*---------MOBILE MENU (END)--------*/
+.loading-screen {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #F8F8F8;
+  z-index: 1000;
+  transition: opacity 0.5s ease-in-out;
+  opacity: 1;
+}
+.loading-screen__svg-wrap {
+  position: relative;
+  width: 320px;
+  height: 320px;
+  overflow: visible;
+  border-radius: 50%;
+  background-color: transparent;
+  z-index: 0;
+}
+.loading-screen__circle {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 304px;
+  height: 303px;
+  z-index: -1;
+}
+.loading-screen__aim-wrap {
+  position: relative;
+  width: 320px;
+  height: 320px;
+  overflow: visible;
+  border-radius: 50%;
+  background-color: transparent;
+  z-index: 0;
+  animation-name: rotation;
+  animation-duration: 8s;
+  animation-iteration-count: 1;
+  animation-timing-function: linear;
+}
+.loading-screen__text {
+  font-weight: 700;
+  font-size: 24px;
+  text-align: center;
+  white-space: nowrap;
+  color: var(--color-blue);
+  position: absolute;
+  z-index: -2;
+  top: 45%;
+  left: 50%;
+  transform: translateX(-50%);
+  transition: opacity 0.2s ease-in-out;
+  opacity: 1;
+}
+.loading-screen__plan {
+  position: absolute;
+  bottom: -3px;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 1;
+}
+
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+    animation-timing-function: cubic-bezier(0.5, 0, 0.75, 1);
+  }
+  20% {
+    transform: rotate(90deg);
+    animation-timing-function: cubic-bezier(0, 0.25, 0.5, 1);
+  }
+  30% {
+    transform: rotate(90deg);
+  }
+  50% {
+    transform: rotate(180deg);
+    animation-timing-function: cubic-bezier(0, 0.25, 0.5, 1);
+  }
+  60% {
+    transform: rotate(180deg);
+  }
+  80%, 100% {
+    transform: rotate(270deg);
+  }
+}
+.main-content {
+  display: none;
+}
+
 .tile {
   border-radius: 20px;
 }
@@ -1064,6 +1168,7 @@ a.is-active {
   align-items: center;
   overflow: hidden;
   min-height: calc(100vh - var(--header-height));
+  height: calc(100vh - var(--header-height));
 }
 .hero .header-block {
   justify-items: center;
