--- a/styles/blocks/_header.scss
+++ b/styles/blocks/_header.scss
@@ -2,6 +2,10 @@
 
 
 /*---------HEADER (START)--------*/
+.full-content {
+    display: none;
+}
+
 .header__wrap {
     z-index: 100;
     position: sticky;
