доработки, анимация кнопки закрытия, доработки скролла и правки

--- a/styles/blocks/_footer.scss
+++ b/styles/blocks/_footer.scss
@@ -219,4 +219,9 @@
         font-size: 18px;
         color: var(--color-light);
     }
+    &__copyright{
+        a{
+            text-decoration: underline;
+        }
+    }
 }
