--- a/styles/_globals.scss
+++ b/styles/_globals.scss
@@ -197,7 +197,7 @@ a {
 
 // при фокусе на элементе, который доступен с клавиатуры, добавить аутлайн
 :focus-visible {
-    outline: rem(2) dashed var(--color-gray);
-    outline-offset: rem(4);
+    outline: rem(2) solid transparent;
+    // outline-offset: rem(4);
     transition-duration: 0s !important;
 }
