--- a/styles/blocks/_cargo-types.scss
+++ b/styles/blocks/_cargo-types.scss
@@ -236,7 +236,7 @@
             position: sticky;
             top: 0;
             right: 0;
-            padding-left: 15px;
+            margin-left: 15px;
             order: 2;
             @include mobile {
                 order: 1;
