--- a/styles/blocks/_reviews.scss
+++ b/styles/blocks/_reviews.scss
@@ -169,7 +169,7 @@
                 margin-right: 25px;
                 content: "";
                 flex-shrink: 0;
-                background-image: url(/icons/quotes.svg);
+                background-image: url(./../icons/quotes.svg);
                 background-position: center;
                 background-size: contain;
                 background-repeat: no-repeat;
