--- a/styles/blocks/_banner.scss
+++ b/styles/blocks/_banner.scss
@@ -7,7 +7,7 @@
         aspect-ratio: 96 / 25;
         height: 500px;
         width: 100%;
-        background-image: url("/images/banner.webp");
+        background-image: url(".././images/banner.webp");
         background-repeat: no-repeat;
         background-position: center;
         background-size: cover;
